# inedit

./: CHANGELOG.md  Cargo.toml  source  test
src/: app.rs  components.rs  config.rs  event_handler.rs  lib.rs  main.rs  ui.rs
src/app/: cursor.rs  editor.rs  features.rs  msg.rs
src/app/editor/: actions.rs  movement.rs  search.rs  suggest.rs  view.rs
src/app/features/: syntax.rs
src/app/features/syntax/: themes.rs
src/components/: bottom_bar.rs  editor.rs  message_display.rs  middle_block.rs  middle_box.rs  popup.rs  suggest.rs  top_bar.rs
src/components/middle_block/: editor_block.rs  left_block.rs  right_block.rs
src/components/middle_box/: editor.rs  left_line.rs  right_line.rs
src/components/middle_box/left_line/: diff.rs
