[package]
name = "inedit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
colored = "3.0.0"
crossterm = "0.29.0"
once_cell = "1.21.3"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
syntect = "5.2.0"
tree-sitter = "0.25.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-rust = "0.24.0"
