[package]
name = "inedit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arboard = { version = "3.5.0", features = ["wayland-data-control", "wl-clipboard-rs"] }
colored = "3.0.0"
crossterm = "0.29.0"
directories = "6.0.0"
once_cell = "1.21.3"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
syntect = "5.2.0"
textwrap = "0.16.1"
tree-sitter = "0.25.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-rust = "0.24.0"
unicode-width = "0.1.13"
